[package]
name = "RustHttpTester"
version = "0.1.0"
authors = ["Meshcheryakov Andrey <Meshcheryakov.A.And@sberbank.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#hyper = { version = "0.14", features = ["full"] }
#tokio = { version = "1", features = ["full"] }
curl = "0.4.34"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json", 'blocking'] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"